Add routes and active style for menu items

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -17,7 +17,7 @@
     height: $header-height;
     padding: 13px 0 0 50px;
     background: linear-gradient(to right, $main-color, $dark-main-color);
-    color: $main-font-color;
+    color: $logo-font-color;
     font-size: 24px;
 }
 
