--- a/src/common-scss/variables.scss
+++ b/src/common-scss/variables.scss
@@ -3,7 +3,10 @@ $background-color: #ffffff;
 $main-color: #002A5A;
 $dark-main-color: #001835;
 $shadow-color: rgba(0, 0, 0, 0.2);
-$main-font-color: #ffffff;
+$logo-font-color: #ffffff;
+$main-font-color: #000000;
+$hover-link-color: rgb(50, 104, 166);
+$active-link-color: #001835;
 
 // sizes
 $header-height: 60px;
