--- a/src/components/BlockDivider/BlockDivider.module.scss
+++ b/src/components/BlockDivider/BlockDivider.module.scss
@@ -3,6 +3,7 @@
 .blockDivider {
     height: 6px;
     width: 100%;
+    margin: 60px 0;
     display: flex;
     flex-direction: row;
     align-items: center;
