--- a/src/components/Header/ContactUs/ContactUs.module.scss
+++ b/src/components/Header/ContactUs/ContactUs.module.scss
@@ -14,4 +14,5 @@
     background: linear-gradient(to right, $main-color, $dark-main-color);
     color: $logo-font-color;
     font-size: 18px;
+    cursor: pointer;
 }
