--- a/src/components/BlockDivider/BlockDivider.module.scss
+++ b/src/components/BlockDivider/BlockDivider.module.scss
@@ -4,6 +4,10 @@
     height: 6px;
     width: 100%;
     margin: 60px 0;
+    padding: 0;
+    position: relative;
+    left: 0;
+    right: 0;
     display: flex;
     flex-direction: row;
     align-items: center;
