--- a/src/components/PageWrapper/PageWrapper.module.scss
+++ b/src/components/PageWrapper/PageWrapper.module.scss
@@ -24,6 +24,7 @@ $border-margin: 61px;
 .contentWrapper {
     position: relative;
     margin: 0;
+    z-index: -10;
 }
 
 .content {
@@ -37,8 +38,8 @@ $border-margin: 61px;
     // blocks of content
     & > div {
         width: 100%;
+        position: relative;
         box-sizing: border-box;
-        padding: 120px 208px;
-        margin: 60px 0;
+        margin: 0;
     }
 }
