Add sales leaders reducer, carousel slider and API for it

--- a/src/common-scss/variables.scss
+++ b/src/common-scss/variables.scss
@@ -7,3 +7,4 @@ $logo-font-color: #ffffff;
 $main-font-color: #000000;
 $hover-link-color: rgb(50, 104, 166);
 $active-link-color: #001835;
+$second-color: #ececec
