Add CatalogSubmenu component and opening/closing event

--- a/src/components/Header/Menu/Menu.module.scss
+++ b/src/components/Header/Menu/Menu.module.scss
@@ -8,6 +8,9 @@
 
 .navButton {
     margin: auto $nav-button-margin;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .navButton a {
