Add CatalogSubmenu styles

--- a/src/common-scss/variables.scss
+++ b/src/common-scss/variables.scss
@@ -12,6 +12,8 @@ $main-font-color: #000000;
 $hover-link-color: rgb(50, 104, 166);
 $active-link-color: #001835;
 
+$active-link-bcg-color: #002a5a33;
+
 // sizes
 $header-height: 60px;
 $nav-button-margin: 18px;
