Add drop down with another sales leaders items

--- a/src/common-scss/variables.scss
+++ b/src/common-scss/variables.scss
@@ -4,11 +4,11 @@ $main-color: #002A5A;
 $dark-main-color: #001835;
 $shadow-color: rgba(0, 0, 0, 0.2);
 $second-color: #ECECEC;
+$dark-second-color: #D1D1D1;
 $accent-color: #3268A6;
 
 $logo-font-color: #ffffff;
 $main-font-color: #000000;
-
 $hover-link-color: rgb(50, 104, 166);
 $active-link-color: #001835;
 
