--- a/src/components/SalesLeaders/SalesLeaders.module.scss
+++ b/src/components/SalesLeaders/SalesLeaders.module.scss
@@ -1,11 +1,19 @@
 @import "src/common-scss/variables";
 
-.salesLeadersContainer {
+.anotherSalesLeaders {
+  padding-left: 112px;
+}
+
+.salesLeadersSliderContainer {
+  grid-area: slider;
+}
+
+.salesLeadersSlide {
   width: 100%;
   padding: 10px 70px;
   display: grid;
   grid-template-columns: 70% auto;
-  grid-template-rows: 70% auto;
+  grid-template-rows: auto auto;
   grid-template-areas:
           "desc icon"
           "desc icon";
@@ -75,3 +83,4 @@
   transition: all .2s;
   transition-delay: 0.35s;
 }
+
