--- a/src/components/Header/Menu/CatalogSubmenu/CatalogSubmenu.module.scss
+++ b/src/components/Header/Menu/CatalogSubmenu/CatalogSubmenu.module.scss
@@ -20,7 +20,7 @@
 }
 
 .submenuItem {
-    a {
+    a, button {
         width: 100%;
         min-height: 44px;
         padding: 2px 0;
@@ -31,6 +31,10 @@
         line-height: 20px;
         font-size: 16px;
         text-transform: uppercase;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+        outline: none;
 
         &:hover {
             background-color: $second-color;
