--- a/src/components/Header/Menu/CatalogSubmenu/CatalogSubmenu.module.scss
+++ b/src/components/Header/Menu/CatalogSubmenu/CatalogSubmenu.module.scss
@@ -4,8 +4,9 @@
     position: absolute;
     margin-top: 60px;
     align-self: flex-start;
-    margin-left: -80px;
-    width: 240px;
+    margin-left: -90px;
+    min-width: 240px;
+    max-width: 480px;
     height: auto;
     max-height: 500px;
     padding: 0;
@@ -16,12 +17,14 @@
 .submenuItems {
     padding: 0;
     margin: 0;
-    list-style: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .submenuItem {
     a, button {
-        width: 100%;
+        width: 240px;
         min-height: 44px;
         padding: 2px 0;
         display: flex;
