--- a/src/components/Home/SalesLeaders/SalesLeaders.module.scss
+++ b/src/components/Home/SalesLeaders/SalesLeaders.module.scss
@@ -10,7 +10,7 @@
 
 .salesLeadersSlide {
   width: 100%;
-  padding: 10px 70px;
+  padding: 10px 0;
   display: grid;
   grid-template-columns: 70% auto;
   grid-template-rows: auto auto;
