--- a/src/components/CatalogPage/CatalogHeader/CatalogHeader.module.scss
+++ b/src/components/CatalogPage/CatalogHeader/CatalogHeader.module.scss
@@ -2,6 +2,7 @@
 
 .catalogHeader {
     padding: 80px 140px 0;
+    margin-bottom: 20px;
     display: flex;
     flex-flow: column nowrap;
 }
@@ -44,10 +45,11 @@
 
 .filtersContainer {
     width: 100%;
+    margin-bottom: 20px;
 }
 
 .filterContainer {
-    margin: 20px 0;
+    margin: 20px 0 0 0;
     padding: 0 20px;
     display: grid;
     grid-template-columns: auto auto;
