Add product info layout

--- a/src/common-scss/variables.scss
+++ b/src/common-scss/variables.scss
@@ -6,6 +6,7 @@ $shadow-color: rgba(0, 0, 0, 0.2);
 $second-color: #ECECEC;
 $dark-second-color: #D1D1D1;
 $accent-color: #3268A6;
+$product-info-background-color: #6F6F6F99;
 
 $logo-font-color: #ffffff;
 $main-font-color: #000000;
