--- a/src/components/common/Product/Product.module.scss
+++ b/src/components/common/Product/Product.module.scss
@@ -4,11 +4,18 @@
     width: 170px;
     height: 300px;
     padding: 12px;
-    display: flex;
-    flex-flow: column nowrap;
+    display: grid;
+    grid-template-rows: 182px 1px auto 24px;
+    grid-template-areas:
+        'image'
+        'line'
+        'title'
+        'price';
     align-items: center;
+    justify-items: center;
     background-color: $second-color;
     box-shadow: 0 4px 4px $shadow-color;
+    cursor: pointer;
 
     & > *:not(:last-child) {
         margin-bottom: 12px;
@@ -16,6 +23,7 @@
 }
 
 .productImageContainer {
+    grid-area: image;
     width: 158px;
     height: 158px;
     display: flex;
@@ -30,12 +38,14 @@
 }
 
 .line {
+    grid-area: line;
     width: 100%;
     height: 1px;
     background-color: $main-font-color;
 }
 
 .productDescription {
+    grid-area: title;
     font-size: 14px;
     text-align: center;
 
@@ -48,5 +58,6 @@
 }
 
 .productPrice {
+    grid-area: price;
     font-size: 22px;
 }
