--- a/src/components/AboutCompany/Partners/Partner/Partner.module.scss
+++ b/src/components/AboutCompany/Partners/Partner/Partner.module.scss
@@ -8,9 +8,10 @@
 }
 
 .partnerCard {
-    width: 200px;
+    width: 100%;
     height: 100px;
-    padding: 4px;
+    max-width: 250px;
+    padding: 6px;
     box-sizing: border-box;
     display: flex;
     justify-content: center;
