--- a/src/components/Contacts/Representatives/Representative/Representative.module.scss
+++ b/src/components/Contacts/Representatives/Representative/Representative.module.scss
@@ -12,6 +12,7 @@
   font-size: 16px;
   font-weight: bold;
   text-transform: uppercase;
+  transition-duration: 0.2s;
 }
 
 .regionDescription {
@@ -20,6 +21,7 @@
   grid-template-areas:
           'name name'
           'phone schedule';
+  transition-duration: 0.2s;
 }
 
 .aboutName {
