--- a/src/components/Contacts/OurContacts/OurContacts.module.scss
+++ b/src/components/Contacts/OurContacts/OurContacts.module.scss
@@ -1,5 +1,10 @@
 
+.contactsSection {
+  margin-top: 50px;
+}
+
 .contactsContainer {
+  margin-top: 50px;
   display: grid;
   grid-template-columns: repeat(3, auto);
   justify-items: center;
