Add copy email to clipboard

--- a/src/common-scss/variables.scss
+++ b/src/common-scss/variables.scss
@@ -5,7 +5,7 @@ $dark-main-color: #001835;
 $shadow-color: rgba(0, 0, 0, 0.2);
 $second-color: #ECECEC;
 $dark-second-color: #D1D1D1;
-$accent-color: #3268A6;
+$accent-color: #3268a6;
 $product-info-background-color: #6F6F6F99;
 
 $logo-font-color: #ffffff;
