--- a/src/components/Contacts/OurContacts/OurContacts.module.scss
+++ b/src/components/Contacts/OurContacts/OurContacts.module.scss
@@ -1,3 +1,4 @@
+@import "src/common-scss/variables";
 
 .contactsSection {
   margin-top: 50px;
@@ -35,4 +36,61 @@
 .contact {
   text-align: center;
   font-size: 14px;
+}
+
+.contactWithCopy {
+  display: flex;
+  align-items: center;
+  gap: 6px
+}
+
+.tip {
+  background-color: #ffffff;
+  transition-duration: 0.2s;
+  opacity: 0;
+  position: absolute;
+  top: 25px;
+  right: 28px;
+  left: -28px;
+  color: #A1A1A1;
+  text-align: center;
+  font-size: 10px;
+  padding: 3px 0;
+  width: 70px;
+}
+
+.copy {
+  position: relative;
+  display: inline-block;
+}
+
+.copyButton {
+  transition-duration: 0.05s;
+  cursor: pointer;
+
+  &:hover ~.tip {
+    opacity: 1;
+  }
+
+  &:active {
+    transform: scale(0.9);
+  }
+}
+
+.frontCopy {
+  width: 6px;
+  height: 10px;
+  position: relative;
+  bottom: 5px;
+  background: #ffffff;
+  outline: 2px solid #ffffff;
+}
+
+.backCopy {
+  width: 6px;
+  height: 10px;
+  position: relative;
+  top: 5px;
+  left: 3px;
+  background: transparent;
 }
