--- a/src/components/Home/AboutSite/AboutSite.module.scss
+++ b/src/components/Home/AboutSite/AboutSite.module.scss
@@ -4,7 +4,7 @@
     min-height: 560px;
     display: grid;
     grid-template-rows: 75% 25%;
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 65% 35%;
     grid-template-areas:
         "info box"
         "distributors box";
@@ -65,6 +65,7 @@
 
 .product {
     position: absolute;
+    transition-duration: 0.3s;
 
     &:first-of-type {
         top: 120px;
@@ -72,7 +73,6 @@
         right: 0;
         bottom: 0;
         z-index: 5;
-        transform: rotate(-18deg);
     }
     &:nth-of-type(2) {
         top: 50px;
@@ -80,15 +80,13 @@
         right: 0;
         bottom: 0;
         z-index: 7;
-        transform: rotate(-6deg);
     }
     &:nth-of-type(3) {
         top: 130px;
-        left: 210px;
+        left: 190px;
         right: 0;
         bottom: 0;
         z-index: 6;
-        transform: rotate(10deg);
     }
     &:last-of-type {
         top: 80px;
@@ -96,7 +94,6 @@
         right: 0;
         bottom: 0;
         z-index: 8;
-        transform: rotate(20deg);
     }
 }
 
