--- a/src/components/PageWrapper/PageWrapper.module.scss
+++ b/src/components/PageWrapper/PageWrapper.module.scss
@@ -23,8 +23,8 @@ $border-margin: 61px;
                         2px 2px,
                         2px 100%,
                         calc(100% - 2px) 100%,
-                        calc(100% - 2px) 2px,
-                        2px 2px,
+                        calc(100% - 2px) 0,
+                        2px 0,
                         100% 0,
                         100% 100%,
                         0 100%,
