--- a/src/components/Home/CatalogSection/CatalogSection.module.scss
+++ b/src/components/Home/CatalogSection/CatalogSection.module.scss
@@ -3,9 +3,10 @@
 .categoriesContainer {
     width: 100%;
     margin-top: 40px;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
 }
 
 .categoryContainer {
