--- a/src/components/PartnersPage/Partners/Partner/Partner.module.scss
+++ b/src/components/PartnersPage/Partners/Partner/Partner.module.scss
@@ -12,7 +12,7 @@
             'name'
             'description'
             'link';
-    row-gap: 10px;
+    row-gap: 20px;
     justify-items: center;
     background-color: $second-color;
     box-shadow: 0 4px 4px $shadow-color;
@@ -23,6 +23,11 @@
 
 .partnerImageContainer {
     grid-area: image;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    place-items: center;
+    place-content: center;
     border-radius: 45%;
     overflow: hidden;
     background-color: $background-color;
@@ -30,8 +35,8 @@
 
 .partnerImage {
     object-fit: contain;
-    width: 180px;
-    height: 140px;
+    width: 160px;
+    height: 120px;
 }
 
 .partnerName, .partnerDescription, .partnerLink {
