Add validation to contact form

--- a/src/common-scss/variables.scss
+++ b/src/common-scss/variables.scss
@@ -15,6 +15,8 @@ $active-link-color: #001835;
 
 $active-link-bcg-color: #002a5a33;
 
+$error-color: #cb0000;
+
 // sizes
 $header-height: 60px;
 $nav-button-margin: 18px;
