--- a/src/components/AboutCompany/Facts/Fact/Fact.module.scss
+++ b/src/components/AboutCompany/Facts/Fact/Fact.module.scss
@@ -2,6 +2,7 @@
 .factContainer {
   display: grid;
   grid-template-columns: 70% auto;
+  grid-template-rows: 256px;
   grid-template-areas: "desc image";
   box-sizing: border-box;
   justify-items: center;
