--- a/src/components/Home/SalesLeaders/AnotherSalesLeaders/DropdownMenu/DropDawnMenu.module.scss
+++ b/src/components/Home/SalesLeaders/AnotherSalesLeaders/DropdownMenu/DropDawnMenu.module.scss
@@ -6,6 +6,7 @@
   display: none;
   background-color: $second-color;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  z-index: 20;
 }
 
 .dropDawnList {
