Fix merging conflicts

--- a/src/components/AboutCompany/Certificates/Certificates.module.scss
+++ b/src/components/AboutCompany/Certificates/Certificates.module.scss
@@ -2,6 +2,7 @@
     margin-top: 60px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    justify-items: center;
     column-gap: 20px;
     row-gap: 40px;
 }
