--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 94px;
   box-sizing: border-box;
-  padding: 0 20px;
+  padding: 0 80px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -13,5 +13,5 @@
 }
 
 .footerText {
-  color: $main-font-color;
+  color: $logo-font-color;
 }
