Fix some problems and add style to catalog heading

--- a/src/components/CatalogPage/CatalogHeader/CatalogHeader.module.scss
+++ b/src/components/CatalogPage/CatalogHeader/CatalogHeader.module.scss
@@ -1,7 +1,7 @@
 @import '../../../common-scss/variables';
 
 .catalogHeader {
-    padding: 80px 140px 0;
+    padding: 0;
     margin-bottom: 20px;
     display: flex;
     flex-flow: column nowrap;
