--- a/src/components/Contacts/HowToFindUs/HowToFindUs.module.scss
+++ b/src/components/Contacts/HowToFindUs/HowToFindUs.module.scss
@@ -34,7 +34,7 @@
 .box {
   width: 50%;
   height: 100%;
-  border: 3px dashed $second-color;
+  border: 3px dashed #{$second-color};
   margin: 50px;
   float: left;
 }
