--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -18,7 +18,7 @@
     width: 350px;
     height: $header-height;
     padding: 13px 0 0 50px;
-    background: linear-gradient(to right, $main-color, $dark-main-color);
+    background: linear-gradient(to right, #{$main-color}, #{$dark-main-color});
     color: $logo-font-color;
     font-size: 24px;
 }
@@ -26,5 +26,5 @@
 .logoContainer {
     width: 350px;
     height: $header-height;
-    filter: drop-shadow(3px 3px 5px $shadow-color);
+    filter: drop-shadow(3px 3px 5px #{$shadow-color});
 }
