--- a/src/components/PageWrapper/PageWrapper.module.scss
+++ b/src/components/PageWrapper/PageWrapper.module.scss
@@ -32,8 +32,8 @@ $border-margin: 61px;
         );
 
         background-image: repeating-linear-gradient(to bottom,
-                $second-color 0px,
-                $second-color 12px,
+                #{$second-color} 0px,
+                #{$second-color} 12px,
                 transparent 12px,
                 transparent 22px);
     }
@@ -48,7 +48,7 @@ $border-margin: 61px;
     width: calc(100% + #{$border-margin * 2});
     position: relative;
     top: 0;
-    left: -$border-margin;
+    left: #{-$border-margin};
     right: 0;
     bottom: 0;
 
