--- a/src/components/CatalogPage/CatalogPage.module.scss
+++ b/src/components/CatalogPage/CatalogPage.module.scss
@@ -1,7 +1,7 @@
 @import '../../common-scss/variables';
 
 .heading {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
@@ -16,6 +16,8 @@
     align-items: center;
     cursor: pointer;
     user-select: none;
+    text-decoration: none;
+    color: $main-font-color;
 
     & > *:first-child {
         margin-right: 10px;
