Add append preloader and info additional info about search result

--- a/src/components/CatalogPage/Products/Products.module.scss
+++ b/src/components/CatalogPage/Products/Products.module.scss
@@ -25,3 +25,10 @@
     text-decoration: none;
     cursor: pointer;
 }
+
+.noProductsInfo {
+    font-size: 16px;
+    font-weight: bold;
+    color: $dark-second-color;
+    text-align: center;
+}
