Attach footer to bottom of page

--- a/src/components/CatalogPage/CatalogPage.module.scss
+++ b/src/components/CatalogPage/CatalogPage.module.scss
@@ -1,5 +1,9 @@
 @import '../../common-scss/variables';
 
+.catalogBody {
+    min-height: 100vh;
+}
+
 .heading {
     margin-bottom: 40px;
     display: flex;
